--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,8 @@
     <string name="this_is_demo_name">This is Demo Name</string>
     <string name="this_is_course_name">This is Course Name</string>
     <string name="this_is_email_name">This is Email Name</string>
-    <string name="this_is_email_name">This is Email Name</string>
-    <string name="this_is_email_name">This is Email Name</string>
     <string name="buy">BUY</string>
+    <string name="title_activity_admin">activity_admin</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
 </resources>
